--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,9 @@ body {
   font-size: 2.5em;
   margin-top: 20vh;
   color:rgb(41, 53, 44);
-  height: fit-content;
+  height: 100vh;
   margin-bottom: 40vh;
 } 
-
 
 
 a {
